[package]
name = "pcb_forge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gen_gcode = "0.1.0"
serde = { version = "1.0.160", features = [ "derive" ] }
serde_yaml = "0.9.21"
home = "0.5.4"
nalgebra = { version = "0.32.2", features = [ "serde-serialize" ] }
anyhow = "1.0.70"
log = "0.4.17"
simple_logger = "4.1.0"
uom = { version = "0.34.0", features = [ "use_serde" ] }
camino = { version = "1.1.4", features = [ "serde1" ] }
argh = "0.1.10"
semver = { version = "1.0.17", features = [ "serde" ] }
nom = "7.1.3"
nom_locate = "4.1.0"

